[tool.poetry]
name = "was_robot_suite"
version = "0.1.0"
description = "Web Archiving Robots"
authors = ["Michael J. Giarlo <mjgiarlo@stanford.edu>"]
license = "Apache 2.0"

# we are just using poetry to install dependencies
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
cdxj-indexer = "^1.4.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
