[project]
name = "was_robot_suite"
version = "0.1.0"
description = "Web Archiving Robots"
authors = [
    {name = "Michael J. Giarlo", email = "mjgiarlo@stanford.edu"},
]
license = {text = "Apache 2.0"}
requires-python = ">=3.8, <4.0"
dependencies = [
    "cdxj-indexer >=1.4.5, <2.0.0",
]
package-mode = false
